Version 2022.10.0 (2022-10-01)
- Rename hub event

Version 2022.9.1 (2022-09-20)
- Improve XmlServer shutdown
- Add name to threads and executors
- Improve ThreadPoolExecutor shutdown

Version 2022.9.0 (2022-09-02)
- Exclude value from event_data if None

Version 2022.8.15 (2022-08-27)
- Fix select entity detection

Version 2022.8.14 (2022-08-23)
- Exclude STRING sysvar from extended check

Version 2022.8.13 (2022-08-23)
- Allow three states for a forced availability of a device

Version 2022.8.12 (2022-08-23)
- Add device_type to device availability event
- Code deduplication and small fixes

Version 2022.8.11 (2022-08-18)
- Adjust logging (level and message)
- Delete sysvar if type changes

Version 2022.8.10 (2022-08-16)
- Improve readability of XmlRpc server
- Remove module data

Version 2022.8.9 (2022-08-16)
- Fix check if thread is started

Version 2022.8.8 (2022-08-16)
- Remove unused local_ip from XmlRPCServer
- Create all XmlRpc server by requested port(s)

Version 2022.8.7 (2022-08-12)
- Fix hs_color for CeColorDimmer(HM-LC-RGBW-WM)

Version 2022.8.6 (2022-08-12)
- Reduce api calls for light

Version 2022.8.5 (2022-08-11)
- Add cache for rega script files

Version 2022.8.4 (2022-08-08)
- Add platform as field and remove obsolete constructors
- Reduce member

Version 2022.8.3 (2022-08-07)
- Remove CHANNEL_OPERATION_MODE from cover ce
- Refactor get_value/set_value
- Remove domain from model
- Rename unique_id to unique_identifier
- Remove should_poll from model

Version 2022.8.2 (2022-08-02)
- Remove obsolete methods
- Remove obsolete device_address parameter
- Rename sysvar to hub entity
- Add program buttons

Version 2022.8.0 (2022-08-01)
- Fix pylint, mypy issues due to newer versions
- Remove properties of final members
- Add types to Final
- Init entity fields in init method
- Remove device_info from model
- Remove attributes from model

Version 2022.7.14 (2022-07-28)
- Add HmIP-BS2 to custom entities
- Remove force and add call_source for getValue
